covid-fastapi/covid-fastapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: covid-fastapi
  namespace: myspace
spec:
  replicas: 1
  selector:
    matchLabels:
      bb: covid-fastapi
  template:
    metadata:
      labels:
        bb: covid-fastapi
    spec:
      containers:
      - name: covid-fastapi
        image: ai-service-fastapi:0.2.0
---
apiVersion: v1
kind: Service
metadata:
  name: covid-fastapi
  namespace: myspace
spec:
  type: NodePort
  selector:
    app: covid-fastapi
  ports:
  - port: 8051
